# snomed-finding-extractor

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: ALIASES.md  API.md  DECISIONS.md  HAZARD_LOG.md  REGULATORY_ANCHORS.md  SAFETY_CASE.md  TECHNICAL_FILE.md  TERMINOLOGY.md  USAGE.md  VALIDATION_PLAN.md
fixtures/: example-diagnosis-request.json  example-examination-findings-request.json  example-observable-request.json  example-plan-request.json  example-request.json  synthetic-diagnoses.openehr-valueset.json  synthetic-examination-findings.openehr-valueset.json  synthetic-observables.openehr-valueset.json  synthetic-valueset.openehr-valueset.json
fixtures/aliases/: tiny-gp-aliases.json
fixtures/artefacts/: tiny-symptoms.json
src/: context.rs  error.rs  extractor.rs  lib.rs  matcher.rs  model.rs  normalization.rs  plan.rs  rf2.rs  synthetic.rs  terminology.rs
tests/: diagnoses.rs  examination_findings.rs  extraction.rs  observables.rs  openehr_import.rs  plan_entities.rs  synthetic_generation.rs
web/: app.js  index.html  styles.css
