[package]
name = "snomed-finding-extractor"
version = "0.1.0"
edition = "2021"
description = "Fast, explainable SNOMED CT finding, observable entity, and examination finding extraction for clinician-confirmed SOAP note coding."
repository = "https://github.com/Goonerjon123/snomed-finding-extractor"
publish = false

[lib]
name = "snomed_finding_extractor"
path = "src/lib.rs"

[[bin]]
name = "snomed-extract"
path = "src/bin/snomed-extract.rs"

[[bin]]
name = "snomed-serve"
path = "src/bin/snomed-serve.rs"
required-features = ["http"]

[features]
default = []
http = [
    "dep:axum",
    "dep:tokio",
    "dep:tower-http",
    "dep:tracing",
    "dep:tracing-subscriber",
]

[dependencies]
aho-corasick = "1.1"
anyhow = "1.0"
axum = { version = "0.7", optional = true }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "net"], optional = true }
tower-http = { version = "0.5", features = ["trace"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["fmt"], optional = true }
unicode-normalization = "0.1"

[dev-dependencies]
tempfile = "3.10"
